# BML-traffic-model

./: README.md  main.cpp
mpi_version/: build.sh  main_MPI.cpp  run.sh
openmp_version/: build.sh  run.sh
openmp_version/src/: CMakeLists.txt  main_omp.cpp  spmat.h  spmatfull.h  spmatfullomp.cpp  spmatvwbbs.h  spmatvwbbsomp.cpp  vectbeg.h
sequential_version/: build.sh  run.sh
sequential_version/src/: CMakeLists.txt  main_seq.cpp  spmatfull.cpp  spmatvwbbs.cpp
